--- a/Réalisation/style.css
+++ b/Réalisation/style.css
@@ -5,7 +5,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 body {
-    background: #e7f1ff;
+    background: #929dad;
     
 }
 li {
@@ -14,13 +14,13 @@ li {
 
 a {
     text-decoration: none;
-    color: #4400ab;
+    color: #ab4d00;
     font-weight: 700;
 }
 
 a:hover {
     text-decoration: underline;
-    color: #240058;
+    color: #1f5492;
 }
 
 img {
